  Avoided use of variable name exit which is a reserved keyword. 
  Avoided the use of temporary variables that are not needed.
- In development.unittest, 
  - removed non-needed import statement,
  - removed argument dir from method printNumberOfClasses(self)
    as this argument is not used.
- Updated to latest version of DyMat as on https://bitbucket.org/jraedler/dymat/,
  commit 4e819cb


Version 1.2.0, May 15, 2013 -- Release 1.2
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Changed buildingspy.development.unittest so that 
  the string 'svn-id' is no longer searched in, 
  or written to, the reference result files.
- Improved error reporting of the package that runs
  the unit tests.
- Updated buildingspy.development.unittest to allow testing
  of other libraries than the Buildings library.
- Updated buildingspy.development.unittest to include
  a model check in the pedantic mode of Dymola.


Version 1.1.2, January 8, 2013 -- Release 1.1
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Fixed bug in Simulator.py to allow setting Modelica parameters
  that are of type string.


Version 1.1.1, October 9, 2012 -- Release 1.1
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Improved error reporting in unittest.py
- Fixed bug in constructor of simulate.Simulator.py that caused
    TypeError: __init__() got an unexpected keyword argument 'directory'


Version 1.1.0, July 26, 2012 -- Release 1.1
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Added class buildingspy.io.postprocess.Plotter.
  This simplifies the creation of boxplot and the
  plotting of data that repeat every day.
- Moved function buildingspy.development.unittest.Tester.__interpolate
  to buildingspy.io.postprocess.Plotter.interpolate
- Caught exception that is caused when non-ascii characters are
  used in the comments of constants, parameters or variables. Now,
  these files are excluded from the unit tests and a warning is issued.
- Centralized error reporting to using buildings.io.reporter instead