@@ -19,6 +19,12 @@ Version 1.3.0, xxxx, 2013 -- Release 1.3
     as this argument is not used.
 - Updated to latest version of DyMat as on https://bitbucket.org/jraedler/dymat/,
   commit 4e819cb
+- In development.Tester, method __getSimulationResults(),
+  corrected error that caused results only to be stored if there is
+  at least one variable requested for comparison that has more than 
+  two support points. That is, if a script only requested to store 
+  parameters, or variables that solely depend on parameters, 
+  then no results from this simulation were not stored.
 
 
 Version 1.2.0, May 15, 2013 -- Release 1.2
